# pihole6-api

./: README.md  pyproject.toml  requirements.txt  setup.py  test.py
pihole6/: main.py
src/pihole6/: main.py
tests/: test.py
