[project]
name = "pihole6"
version = "0.0.1"
authors = [
  { name="Ingo Ratsdorf", email="ingo@envirology.co.nz" },
]
description = "A python3 wrapper for the pihole6 api"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning"
]

[project.urls]
Homepage = "https://github.com/ingoratsdorf/pihole6-api"
